apply some changes

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         alt="hero_4"
       />
       <!-- Overlay -->
-      <div class="absolute inset-0 bg-black/70"></div>
+      <div class="absolute inset-0 bg-black/75"></div>
       <!-- /Overlay -->
       <div class="absolute inset-0 h-full w-full">
         <div class="flex min-h-full w-full items-center justify-center">
@@ -166,9 +166,9 @@
     <!-- Body(Main-content) ...............................................................-->
     <div>
       <!-- Popular places -->
-      <div class="bg-gray-50 py-32">
+      <div class="bg-slate-100 py-32">
         <!-- Container -->
-        <div class="w-9/12 mx-auto">
+        <div class="w-8/12 mx-auto">
           <!-- Title -->
           <div class="text-center mb-12">
             <p class="text-4xl font-bold text-gray-600 pb-3">Popular Places</p>
@@ -176,12 +176,14 @@
           </div>
           <!-- Title -->
           <div>
-            <div class="grid grid-cols-3 gap-6 mx-auto">
+            <div class="grid grid-cols-3 gap-10 mx-auto">
               <!-- Card one -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
-                    class=""
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-01.jpg"
                     alt="popular-place-01"
                   />
@@ -234,9 +236,12 @@
               </div>
               <!-- /Card one -->
               <!-- Card two -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-02.jpg"
                     alt="popular-place-02"
                   />
@@ -289,7 +294,9 @@
               </div>
               <!-- /Card two -->
               <!-- Card three -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
                     src="./assets/images/popular-place-03.jpg"
@@ -347,9 +354,12 @@
               </div>
               <!-- /Card three -->
               <!-- Card four -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-04.jpg"
                     alt="popular-place-04"
                   />
@@ -407,9 +417,12 @@
               </div>
               <!-- /Card four -->
               <!-- Card five -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-05.jpg"
                     alt="popular-place-05"
                   />
@@ -462,9 +475,12 @@
               </div>
               <!-- /Card five -->
               <!-- Card six -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-06.jpg"
                     alt="popular-place-06"
                   />
@@ -515,9 +531,12 @@
               </div>
               <!-- /Card six -->
               <!-- Card seven -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-07.jpg"
                     alt="popular-place-07"
                   />
@@ -573,9 +592,12 @@
               </div>
               <!-- /Card seven -->
               <!-- Card eight -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-08.jpg"
                     alt="popular-place-08"
                   />
@@ -628,9 +650,12 @@
               </div>
               <!-- /Card eight -->
               <!-- Card nine -->
-              <div class="bg-white rounded-md shadow max-w-xl overflow-hidden">
+              <div
+                class="bg-white rounded-md shadow overflow-hidden hover:shadow-xl transition-all"
+              >
                 <div class="h-48 overflow-hidden">
                   <img
+                    class="w-full h-full object-cover"
                     src="./assets/images/popular-place-09.jpg"
                     alt="popular-place-09"
                   />
@@ -694,7 +719,7 @@
       </div>
       <!-- /Popular places -->
       <!-- Discover By Categories ...................................................-->
-      <div class="bg-sky-50 py-32">
+      <div class="bg-gray-50 py-32">
         <!-- Container -->
         <div class="w-8/12 mx-auto">
           <!-- title -->
@@ -710,7 +735,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -726,7 +751,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -742,7 +767,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -758,7 +783,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -774,7 +799,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -790,7 +815,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -806,7 +831,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -822,7 +847,7 @@
               <!-- category -->
               <a
                 href="#"
-                class="p-4 bg-white w-60 shadow hover:shadow space-y-5 rounded-lg"
+                class="p-4 bg-white w-60 shadow hover:shadow-lg transition-all space-y-5 rounded-lg"
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
@@ -1096,7 +1121,7 @@
               <p class="text-sm fon-bold uppercase text-indigo-500 mb-1">
                 Our Support Heroes
               </p>
-              <p class="text-4xl font-bold">Meet The Team</p>
+              <p class="text-4xl font-bold text-gray-600">Meet The Team</p>
               <p class="mt-3 text-gray-500 text-lg">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
                 iste quae ad! Assumenda, magnam fugiat natus dolore eveniet,
@@ -1105,7 +1130,7 @@
               </p>
               <div class="mt-8">
                 <button
-                  class="mr-4 py-2 px-3 border-2 border-gray-500 fon-semibold text-gray-500 shadow-md hover:bg-gray-500 hover:text-white rounded-md"
+                  class="mr-4 py-2 px-3 border-2 border-gray-500 fon-semibold text-gray-500 shadow-md hover:bg-gray-500 hover:text-white rounded-full transition-colors"
                 >
                   <span class="material-symbols-outlined align-middle mr-1">
                     groups
@@ -1113,10 +1138,10 @@
                   Meet Us
                 </button>
                 <button
-                  class="mr-4 py-2 px-3 border-2 bg-blue-500 border-blue-500 fon-semibold text-white shadow-md hover:bg-blue-600 hover:text-white hover:border-blue-600 rounded-md"
+                  class="mr-4 py-2 px-3 border-2 bg-blue-500 border-blue-500 fon-semibold text-white shadow-md hover:bg-blue-600 hover:text-white hover:border-blue-600 rounded-full transition-colors"
                 >
                   <span class="material-symbols-outlined align-middle mr-1">
-                    lightbulb
+                    read_more
                   </span>
                   Learn More
                 </button>
@@ -1185,7 +1210,7 @@
               </div>
             </div>
             <div class="w-1/2 text-gray-600">
-              <p class="text-xl font-semibold capitalize mb-3">
+              <p class="text-xl font-bold capitalize mb-3">
                 Help Us Improve Our Productivity
               </p>
               <p class="mb-6">
@@ -1204,7 +1229,7 @@
       </div>
       <!-- /End Testimonials -->
       <!-- Start Contact Us ..................................................-->
-      <div class="bg-sky-50 py-36">
+      <div class="bg-slate-100 py-32">
         <div class="w-9/12 mx-auto">
           <div class="shadow-lg rounded-xl relative">
             <img
@@ -1221,13 +1246,13 @@
                       Find Us
                     </p>
                     <div class="flex gap-6">
-                      <div class="border-r border-white">
+                      <div class="border-r border-white pr-4">
                         <p class="font-bold text-2xl">New York</p>
                         <p class="text-sm">
                           Derrick Street Boston, MA 02130 USA
                         </p>
                       </div>
-                      <div class="border-r border-white">
+                      <div class="border-r border-white pr-4">
                         <p class="font-bold text-2xl">California</p>
                         <p class="text-sm">
                           Derrick Street Boston, MA 02130 USA
@@ -1314,7 +1339,7 @@
       </div>
       <!-- /End Contact Us -->
       <!-- Start Feactures ...................................................-->
-      <div class="bg-slate-50 py-36">
+      <div class="bg-slate-50 py-32">
         <div class="w-8/12 mx-auto">
           <div class="text-center text-gray-600 mb-12">
             <p class="text-4xl font-bold mb-2">Our Valuable Features</p>
@@ -1325,7 +1350,7 @@
           </div>
           <!-- Cards container -->
           <div class="grid grid-cols-3 gap-16">
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1356,7 +1381,7 @@
               </p>
             </div>
             <!-- feature box -->
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1383,7 +1408,7 @@
               </p>
             </div>
             <!-- feature box -->
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1410,7 +1435,7 @@
               </p>
             </div>
             <!-- feature box -->
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1437,7 +1462,7 @@
               </p>
             </div>
             <!-- feature box -->
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1464,7 +1489,7 @@
               </p>
             </div>
             <!-- feature box -->
-            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg">
+            <div class="p-4 rounded-md hover:bg-white hover:shadow-lg transition-all">
               <button
                 class="text-gray-600 bg-slate-100 p-2 rounded-md shadow-md"
               >
@@ -1501,7 +1526,7 @@
       </div>
       <!-- /End Features -->
       <!-- Start Loading Section .............................................-->
-      <div class="bg-sky-50 py-36">
+      <div class="bg-slate-100 py-32">
         <div class="w-8/12 mx-auto">
           <div class="text-center text-gray-600 mb-12">
             <p class="text-4xl font-bold mb-2">Blog Posts</p>
