--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tail-listing</title>
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/images/logo.png"
+      type="image/x-icon"
+    />
     <!-- Google Fonts Icons -->
     <link
       rel="stylesheet"
@@ -43,7 +47,7 @@
     <!-- Start Banner ...............................................................-->
     <div
       class="hero-banner relative h-screen bg-center bg-cover"
-      style="background-image: url('./src/assets/images/hero/hero_4.jpg')"
+      style="background-image: url('./assets/images/hero/hero_4.jpg')"
     >
       <!-- <img
         class="h-full w-full object-cover"
@@ -200,7 +204,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-01.jpg"
+                    src="./assets/images/popular-place-01.jpg"
                     alt="popular-place-01"
                   />
                 </div>
@@ -260,7 +264,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-02.jpg"
+                    src="./assets/images/popular-place-02.jpg"
                     alt="popular-place-02"
                   />
                 </div>
@@ -319,7 +323,7 @@
               >
                 <div class="h-48 overflow-hidden">
                   <img
-                    src="./src/assets/images/popular-place-03.jpg"
+                    src="./assets/images/popular-place-03.jpg"
                     alt="popular-place-03"
                   />
                 </div>
@@ -384,7 +388,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-04.jpg"
+                    src="./assets/images/popular-place-04.jpg"
                     alt="popular-place-04"
                   />
                 </div>
@@ -449,7 +453,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-05.jpg"
+                    src="./assets/images/popular-place-05.jpg"
                     alt="popular-place-05"
                   />
                 </div>
@@ -509,7 +513,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-06.jpg"
+                    src="./assets/images/popular-place-06.jpg"
                     alt="popular-place-06"
                   />
                 </div>
@@ -569,7 +573,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-07.jpg"
+                    src="./assets/images/popular-place-07.jpg"
                     alt="popular-place-07"
                   />
                 </div>
@@ -634,7 +638,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-08.jpg"
+                    src="./assets/images/popular-place-08.jpg"
                     alt="popular-place-08"
                   />
                 </div>
@@ -694,7 +698,7 @@
                 <div class="h-48 overflow-hidden">
                   <img
                     class="w-full h-full object-cover"
-                    src="./src/assets/images/popular-place-09.jpg"
+                    src="./assets/images/popular-place-09.jpg"
                     alt="popular-place-09"
                   />
                 </div>
@@ -785,7 +789,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-01.png"
+                  src="./assets/images/icons/categorie-01.png"
                   alt="categorie-01"
                 />
                 <div class="space-y-2 text-center">
@@ -803,7 +807,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-02.png"
+                  src="./assets/images/icons/categorie-02.png"
                   alt="categorie-02"
                 />
                 <div class="space-y-2 text-center">
@@ -821,7 +825,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-09.png"
+                  src="./assets/images/icons/categorie-09.png"
                   alt="categorie-09"
                 />
                 <div class="space-y-2 text-center">
@@ -839,7 +843,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-04.png"
+                  src="./assets/images/icons/categorie-04.png"
                   alt="categorie-04"
                 />
                 <div class="space-y-2 text-center">
@@ -857,7 +861,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-05.png"
+                  src="./assets/images/icons/categorie-05.png"
                   alt="categorie-05"
                 />
                 <div class="space-y-2 text-center">
@@ -875,7 +879,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-06.png"
+                  src="./assets/images/icons/categorie-06.png"
                   alt="categorie-06"
                 />
                 <div class="space-y-2 text-center">
@@ -893,7 +897,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-07.png"
+                  src="./assets/images/icons/categorie-07.png"
                   alt="categorie-07"
                 />
                 <div class="space-y-2 text-center">
@@ -911,7 +915,7 @@
               >
                 <img
                   class="w-32 h-32 mx-auto rounded-full"
-                  src="./src/assets/images/icons/categorie-08.png"
+                  src="./assets/images/icons/categorie-08.png"
                   alt="categorie-08"
                 />
                 <div class="space-y-2 text-center">
@@ -957,7 +961,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-01.jpg"
+                  src="./assets/images/collection-01.jpg"
                   alt="collection-01"
                 />
                 <div
@@ -974,7 +978,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-02.jpg"
+                  src="./assets/images/collection-02.jpg"
                   alt="collection-02"
                 />
                 <div
@@ -993,7 +997,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-03.jpg"
+                  src="./assets/images/collection-03.jpg"
                   alt="collection-03"
                 />
                 <div
@@ -1012,7 +1016,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-04.jpg"
+                  src="./assets/images/collection-04.jpg"
                   alt="collection-04"
                 />
                 <div
@@ -1029,7 +1033,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-05.jpg"
+                  src="./assets/images/collection-05.jpg"
                   alt="collection-05"
                 />
                 <div
@@ -1046,7 +1050,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-06.jpg"
+                  src="./assets/images/collection-06.jpg"
                   alt="collection-06"
                 />
                 <div
@@ -1063,7 +1067,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-07.jpg"
+                  src="./assets/images/collection-07.jpg"
                   alt="collection-07"
                 />
                 <div
@@ -1080,7 +1084,7 @@
               >
                 <img
                   class="rounded w-full h-full object-cover shadow"
-                  src="./src/assets/images/collection-08.jpg"
+                  src="./assets/images/collection-08.jpg"
                   alt="collection-08"
                 />
                 <div
@@ -1120,7 +1124,7 @@
                   <div class="relative">
                     <img
                       class="w-48 h-60 lg:h-52 xl:h-60 object-cover rounded-md shadow-md"
-                      src="./src/assets/images/team/team-01.jpg"
+                      src="./assets/images/team/team-01.jpg"
                       alt="team-01"
                     />
                     <div
@@ -1135,7 +1139,7 @@
                   <div class="relative">
                     <img
                       class="w-48 h-60 lg:h-52 xl:h-60 object-cover rounded-md shadow-md"
-                      src="./src/assets/images/team/team-02.webp"
+                      src="./assets/images/team/team-02.webp"
                       alt="team-02"
                     />
                     <div
@@ -1152,7 +1156,7 @@
                   <div class="relative">
                     <img
                       class="w-48 h-60 lg:h-52 xl:h-60 object-cover rounded-md shadow-md"
-                      src="./src/assets/images/team/team-03.webp"
+                      src="./assets/images/team/team-03.webp"
                       alt="team-03"
                     />
                     <div
@@ -1167,7 +1171,7 @@
                   <div class="relative">
                     <img
                       class="w-48 h-60 lg:h-52 xl:h-60 object-cover rounded-md shadow-md"
-                      src="./src/assets/images/team/team-04.webp"
+                      src="./assets/images/team/team-04.webp"
                       alt="team-04"
                     />
                     <div
@@ -1254,7 +1258,7 @@
                 </div>
                 <img
                   class="w-full h-full object-cover rounded-md shadow-md"
-                  src="./src/assets/images/testimonials/testimonials.jpg"
+                  src="./assets/images/testimonials/testimonials.jpg"
                   alt="testimonials"
                 />
               </div>
@@ -1304,7 +1308,7 @@
           <div
             class="shadow-lg lg:rounded-xl relative py-12 px-12 bg-cover bg-center z-10"
             style="
-              background-image: url('./src/assets/images/contact-us/photo-1524069290683-0457abfe42c3.jpg');
+              background-image: url('./assets/images/contact-us/photo-1524069290683-0457abfe42c3.jpg');
             "
           >
             <div
@@ -1873,13 +1877,13 @@
               </p>
               <div class="flex gap-2">
                 <a href="#">
-                  <img src="./src/assets/images/icons/fb.png" alt="facebbok" /> </a
+                  <img src="./assets/images/icons/fb.png" alt="facebbok" /> </a
                 ><a href="#">
-                  <img src="./src/assets/images/icons/tr.png" alt="twitter" /> </a
+                  <img src="./assets/images/icons/tr.png" alt="twitter" /> </a
                 ><a href="#">
-                  <img src="./src/assets/images/icons/tg.png" alt="telegram" /> </a
+                  <img src="./assets/images/icons/tg.png" alt="telegram" /> </a
                 ><a href="#">
-                  <img src="./src/assets/images/icons/ig.png" alt="instagram" />
+                  <img src="./assets/images/icons/ig.png" alt="instagram" />
                 </a>
               </div>
               <div class="mt-10">
